--- a/HW1.ipynb
+++ b/HW1.ipynb
@@ -220,7 +220,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A. Plot the data from the two streamflow sites as a time series from 1929-2009, with an open circle representing each peak flow value. Be sure to label your axes appropriately and label which graph is associated with which river. Describe qualitatively any changes you see in these records through time. Is there a common theme between the two sites?"
+    "# <font color = 'red'>A. \n",
+    "    \n",
+    "    Plot the data from the two streamflow sites as a time series from 1929-2009, with an open circle representing each peak flow value. Be sure to label your axes appropriately and label which graph is associated with which river. Describe qualitatively any changes you see in these records through time. Is there a common theme between the two sites?"
    ]
   },
   {
@@ -294,7 +296,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "B. For the Sauk River only, graphically examine the entire timeseries and the peak flows occurring before and after 1975 (1929-1974, and 1975-2017). Prepare the following plots, taking care to make sure that they are well-labeled, readable, and convey meaningful information.\n",
+    "# <font color = 'red'>B. \n",
+    "\n",
+    "    For the Sauk River only, graphically examine the entire timeseries and the peak flows occurring before and after 1975 (1929-1974, and 1975-2017). Prepare the following plots, taking care to make sure that they are well-labeled, readable, and convey meaningful information.\n",
     "1. Histograms for the Sauk River for the entire period and each of the sub- periods (3 total).\n",
     "\n",
     "\n",
@@ -687,7 +691,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "C. Based on the plots you have created, discuss whether or not you think a change has occurred in the peak flows around 1975. Be sure to reference your plots (Fig. 1, Fig. 2, etc.) when you discuss them."
+    "# <font color = 'red'>C. \n",
+    "    \n",
+    "    Based on the plots you have created, discuss whether or not you think a change has occurred in the peak flows around 1975. Be sure to reference your plots (Fig. 1, Fig. 2, etc.) when you discuss them."
    ]
   },
   {
@@ -715,7 +721,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A. Make up 1000 numbers with a normal distribution, 1000 numbers with a log-normal distribution, and 1000 numbers with a uniform distribution. For each, make the mean be 60 and standard deviation be 40. (You’ll need to think about what the interval should be for the uniform distribution.)\n"
+    "# <font color = 'red'>A. \n",
+    "    \n",
+    "    Make up 1000 numbers with a normal distribution, 1000 numbers with a log-normal distribution, and 1000 numbers with a uniform distribution. For each, make the mean be 60 and standard deviation be 40. (You’ll need to think about what the interval should be for the uniform distribution.)\n"
    ]
   },
   {
@@ -755,7 +763,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "B. Create descriptive plots (histogram, box and whiskers, quantile plots, PDFs) using all of your samples and compare results from the three distributions. Discuss how you can tell the distributions apart."
+    "# <font color = 'red'>B. \n",
+    "    \n",
+    "    Create descriptive plots (histogram, box and whiskers, quantile plots, PDFs) using all of your samples and compare results from the three distributions. Discuss how you can tell the distributions apart."
    ]
   },
   {
@@ -970,7 +980,9 @@
    "metadata": {},
    "source": [
     "\n",
-    "C. Repeat with just 10 numbers from each set, and again with 25 and 100. For each of these, can you tell the distributions apart? What is the sample mean and standard deviation for each?"
+    "# <font color = 'red'>C. \n",
+    "    \n",
+    "    Repeat with just 10 numbers from each set, and again with 25 and 100. For each of these, can you tell the distributions apart? What is the sample mean and standard deviation for each?"
    ]
   },
   {
@@ -1250,7 +1262,9 @@
    "metadata": {},
    "source": [
     "\n",
-    "D. Discuss the difference between a sample population and the true population.\n",
+    "# <font color = 'red'>D. \n",
+    "    \n",
+    "    Discuss the difference between a sample population and the true population.\n",
     "\n",
     "# <span style=\"color:red\">Answer\n",
     "\n",
