--- a/HW4/Assignment 4 Ximin Hu.ipynb
+++ b/HW4/Assignment 4 Ximin Hu.ipynb
@@ -1352,7 +1352,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "According to the plot, we can see that counting on the H0 change will yield results within the 95% confidence interval. The results suggests that it is safe to use this approach in this study."
+    "According to the plot, we can see that counting on the H0 change will yield results within the 95% confidence interval. The results suggests that it is safe to use this approach in this study.\n",
+    "\n",
+    "For the uncertainties in the data, we can treat them with different approaches. For instance, we can normalize our data to somehow narrow down or eliminate the uncertainties, also do the data cleaning will help, i.e, to cut off some outliers or abnormal points. The other thing we can do is to count the uncertainties as another variable in our model if possible."
    ]
   }
  ],
