--- a/HW5/Lab 5.1.ipynb
+++ b/HW5/Lab 5.1.ipynb
@@ -293,7 +293,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x92399b0>"
+       "<matplotlib.legend.Legend at 0x8e5cba8>"
       ]
      },
      "execution_count": 9,
@@ -333,7 +333,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x91df4a8>"
+       "<matplotlib.legend.Legend at 0x8e08898>"
       ]
      },
      "execution_count": 10,
