--- a/HW5/Lab 5.1.ipynb
+++ b/HW5/Lab 5.1.ipynb
@@ -293,7 +293,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x8e5cba8>"
+       "<matplotlib.legend.Legend at 0x8e5cb70>"
       ]
      },
      "execution_count": 9,
@@ -333,7 +333,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x8e093c8>"
+       "<matplotlib.legend.Legend at 0x8e27f98>"
       ]
      },
      "execution_count": 10,
