--- a/HW5/Assignment 5 Ximin Hu.ipynb
+++ b/HW5/Assignment 5 Ximin Hu.ipynb
@@ -36,24 +36,24 @@
     "\n",
     "P(H)=probability that some one have a syndrome=1/1200\n",
     "\n",
-    "P(E)=probability that have a positive result=0.98/1200+0.02*1199/1200"
+    "P(E)=probability that have a positive result=0.98/1200+0.03*1199/1200"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Probability that a given fetus has Downs syndrome if test shows positive= 0.03926282051282051\n"
+      "Probability that a given fetus has Downs syndrome if test shows positive= 0.02652232746955345\n"
      ]
     }
    ],
    "source": [
-    "print('Probability that a given fetus has Downs syndrome if test shows positive=',(0.98/1200)/(0.98/1200+0.02*1199/1200))"
+    "print('Probability that a given fetus has Downs syndrome if test shows positive=',(0.98/1200)/(0.98/1200+0.03*1199/1200))"
    ]
   },
   {
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
        "4  0.038228              0.004             250.000000"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -351,10 +351,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x53984a8>"
+       "<matplotlib.legend.Legend at 0xada0c50>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -399,7 +399,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0xaaaa400>"
+       "<matplotlib.legend.Legend at 0xb0bd908>"
       ]
      },
      "execution_count": 11,
@@ -575,16 +575,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x5417c18>"
+       "<matplotlib.legend.Legend at 0xb160fd0>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -634,7 +634,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0xabd1198>"
+       "<matplotlib.legend.Legend at 0xb1a3f98>"
       ]
      },
      "execution_count": 18,
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -772,16 +772,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0xca54d68>"
+       "<matplotlib.legend.Legend at 0x6b19ac8>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -840,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -990,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1011,7 +1011,7 @@
        "Text(0.5, 1.0, 'Q01 site water temperature time series plot')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1056,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1065,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1094,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1103,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1112,7 +1112,7 @@
        "Text(0.5, 1.0, 'Q04 site water temperature time series plot')"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1159,11 +1159,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Q:\n",
+    "\n",
     "Discuss the quality of your data. Do you need to take into account any erroneous values or uncertain numbers before you start your statistics?\n",
     "\n",
     "## A:\n",
     "\n",
     "According to the data plotted above, we can tell that there are part of the time series data missed during the whole process, but the rest of them have a rather good quality. Before further data analysis, we also need to clean the dataset, remove some abnormal points or outliers in order to reduce the effects of these noises."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q:\n",
+    "\n",
+    "Write down at least two (more are also okay) very specific questions that you will answer with your data. For each question, write down which statistical tools you will use.\n",
+    "\n",
+    "## A:\n",
+    "\n",
+    "Q1: When is the onset date of snowmelt runoff?\n",
+    "\n",
+    "For question1, we will use ANOVA test to determind when the streams start rising.\n",
+    "\n",
+    "Q2: Whether stream temperature is significantly changed by streamflow timing?\n",
+    "\n",
+    "For question2, we will use several hypothesis tests like Monte Cario Test and fit the data into regression models to determine whether stream temperature is significantly changed by streamflow timing."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Q:\n",
+    "\n",
+    "Based on what you have so far, do you think that your project scope is about right for a 10-page paper, or do you feel that you need to either simplify things to make it shorter or add complexity to make it longer? If you feel adjustments are needed, how to you plan to address this issue?\n",
+    "\n",
+    "## A:\n",
+    "\n",
+    "From the website we can pull down 6 rivers stram and temperature data for the Tuolumne River Watershed and surroundings, which is far enough for our analysis. As the data is a bit of too volumy we decided to start with Q01 and Q04 data to narrow down the range for the 10-page paper.  After few try out on the datasets we can do additional adjustment but so far it looks fine.\n",
+    "\n",
+    "## Q:\n",
+    "\n",
+    "At this point, what do you anticipate being the most difficult parts of your term project? Do you have questions you would like help with or advice on? Write them here.\n",
+    "\n",
+    "## A:\n",
+    "\n",
+    "As at the begninning point, we think the main challange now is to adapt to this large dataset for the analysis, the stream and temperature data is recorded by every half hour for more than 5 years thus we need to figure out how to either simplify the data or pick up some specific subsets for further analysis.\n",
+    "\n",
+    "Also we bit of confused about our 'ultimate' goal of the project, after we get to the conclusion of the relationship between temperature and runoff, should we continue exploring why stream temperatures being unhealthy for fish if snow melts earlier? Or it is OK for us to just get this relationship and end up there."
    ]
   }
  ],
