--- a/HW6/Assignment 6 Ximin Hu.ipynb
+++ b/HW6/Assignment 6 Ximin Hu.ipynb
@@ -1128,9 +1128,33 @@
     "\n",
     "In the simple data assimilation system (section 2.1), what is the Kalman gain? What does it do, and why is it important?\n",
     "\n",
+    "Kalman gain (K) is the relative uncertainties from the model and observations. calculated as $$K=σ^2_m/(σ^2_m+σ^2_o)$$\n",
+    "\n",
+    "Kalman gain gives the weight of models and observations, if the measured error variance is lower than the model uncertainty then more weight will be given to the observation, and vice versa.\n",
+    "\n",
+    "The Kalman gain is important because it can give us the direction to update the model and calculate for the error variance of the assimilation estimate, thus give us more information about the true state x after assimilation.\n",
+    "\n",
     "## B.\n",
     "\n",
-    "According to Rolf Reichle, what are some of the greatest continuing challenges in data assimilation (see section 3)? List at least 3 and for each, give an example of how scientists are dealing with this challenge."
+    "According to Rolf Reichle, what are some of the greatest continuing challenges in data assimilation (see section 3)? List at least 3 and for each, give an example of how scientists are dealing with this challenge.\n",
+    "\n",
+    "1. Input error covariances\n",
+    "\n",
+    "The challenge is to deal with the model and observations that a input error covariances are known.\n",
+    "\n",
+    "There are some stretagies towards it, such as the adaptive techniques during data assimilation and permit some measurement of automation. So far there are already applied on the soil moisture data assimilation.\n",
+    "\n",
+    "2. Quality control\n",
+    "\n",
+    "The challenge is to overcome the poor observations within an experiment.\n",
+    "\n",
+    "Currently researchers working with soil moisture projects using some priori quality control to eliminate some poor data ahead from the observations. However this method is rarely sufficient for the data assimilation. Thus later on the on-line QC routines need to be added as part of the assimilation system.\n",
+    "\n",
+    "3. Bias\n",
+    "\n",
+    "The challenge is that theoratically the errors must be unbiased-strictly random and on average the model estimates and observations must agree with the true fields. However in practice there is never the case.\n",
+    "\n",
+    "To overcome this challenge especially on the long term experiments, people using the normalized deviates or percentiles to somehow reduce the effects from the biases."
    ]
   }
  ],
@@ -1150,7 +1174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
